ビュー修正

--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,9 +1,12 @@
+<header>sauna community
+</header>
+
 <main class="main">
       <div class="inner">
         <h1 class="page-heading">記事一覧</h1>
         <div class="card__wrapper">
           <div class="card">
-            <img src="./images/image.png" alt="" class="card__img" />
+            <img src="../images/image.png" alt="" class="card__img" />
             <div class="card__body">
               <h2 class="card__title">記事タイトルが入ります</h2>
               <p class="card__summary">
@@ -12,7 +15,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./images/image.png" alt="" class="card__img" />
+            <img src="../images/image.png" alt="" class="card__img" />
             <div class="card__body">
               <h2 class="card__title">記事タイトルが入ります</h2>
               <p class="card__summary">
